@@ -1,6 +1,8 @@
 Camlp4s Version 4.02:
 ---------------------
 
+* [27 May 07] Simplified interface of Sformat. The first parameter of
+  the function horiz_vertic is now a function of type "unit -> 'a".
 * [03 May 07] Fixed bug in pr_o: did not print "let f ?a = ()".
 
 Camlp4s Version 4.01:
